# MetaOps

./: .env.example  .gitignore  LICENSE  README.md  bootstrap.py  install.py  mcp_servers.json  mcp_servers.json.example  mimo.md  pyproject.toml
scripts/: migrate_to_single_db.py
src/metaops/: config.py  main.py
src/metaops/backends/: local.py
src/metaops/core/: background.py  callbacks.py  continuation.py  local_llm_driver.py  reasoning_guard.py  root.py  session_checkpoint.py
src/metaops/gateway/: base.py  cli.py  delivery.py  registry.py  session_manager.py  telegram.py
src/metaops/memory/: database.py  embeddings.py  parsers.py  session_service.py  vector_service.py
src/metaops/scheduler/: cron.py
src/metaops/tools/: _shell_guard.py  context_lookup.py  escalation.py  loop_monitor.py  mcp_loader.py  memory_tools.py  rag_tools.py  secure_toolset.py  skill_executor.py  terminal_tool.py  web_search.py  workstream.py
src/metaops/workflows/: agent_runner.py  dev_cycle.py  fact_checker.py  reasoning_agents.py  research.py  thinker.py  vibe_coding.py
tests/: test_config.py  test_continuation.py  test_reasoning_loops.py  test_session_checkpoint.py
