[project]
name = "metaops"
version = "3.0.0"
description = "Enterprise-grade AI agent with Persistent Vector Memory OS and RAG, built on ADK 2.0"
requires-python = ">=3.10"
dependencies = [
    "google-adk>=2.3.0",
    "litellm>=1.83.7,<=1.83.14",
    "pydantic>=2.12,<3",
    "python-dotenv>=1.0.0",
    "prompt_toolkit>=3.0.0",
    "apscheduler>=3.10.4",
    "python-telegram-bot>=20.0",
    "chromadb>=0.5.0",
    "openai>=1.12.0",
    "onnxruntime>=1.16.0",
    "tavily-python>=0.3.0",
    "aiosqlite>=0.21",
    "mcp>=1.24,<2"
]

[project.scripts]
metaops = "metaops.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
