[project]
name = "metaops"
version = "3.0.0"
description = "Enterprise-grade AI agent with Persistent Vector Memory OS and RAG, built on ADK 2.0"
requires-python = ">=3.10"
dependencies = [
    "google-adk[extensions]>=2.3.0,<2.4.0",
    "litellm>=1.83.7,<=1.83.14",
    "pydantic>=2.12,<3",
    "python-dotenv>=1.0.0",
    "prompt_toolkit>=3.0.0",
    "apscheduler>=3.10.4",
    "python-telegram-bot>=20.0",
    "chromadb>=0.5.0",
    "openai>=1.12.0",
    "onnxruntime>=1.16.0",
    "tavily-python>=0.3.0",
    "aiosqlite>=0.21",
    "httpx>=0.27",
    "mcp>=1.24,<2",
    "beautifulsoup4>=4.12.0",
    "html2text>=2024.1.0",
    "python-docx>=1.0.0",
    "python-pptx>=0.6.23",
    "PyMuPDF>=1.24.0",
    "pdfplumber>=0.11.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
rtf = ["striprtf>=0.8.0"]
doc = ["antiword>=0.8"]

[project.scripts]
metaops = "metaops.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
